--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -10,8 +10,11 @@
 
         <div class="panel-body">
             <div class="input-group">
-                <textarea class="form-control custom-control" rows="3" style="resize:none"></textarea>
+
+                <textarea class="form-control custom-control" rows="3" style="resize:none" ng-model="main.message"></textarea>
+
                 <span class="input-group-addon btn btn-primary" ng-click="main.postMessage()">Post</span>
+
             </div>
         </div>
 
