Login and Register logic,  authentication with tokens, front end validation, etc etc.

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,9 +1,5 @@
 <div class="container">
 
-    <div>
-        <acme-navbar creation-date="main.creationDate"></acme-navbar>
-    </div>
-
     <div class="panel panel-default">
 
         <div class="panel-heading">Post A Message</div>
@@ -16,6 +12,20 @@
                 <span class="input-group-addon btn btn-primary" ng-click="main.postMessage()">Post</span>
 
             </div>
+        </div>
+
+    </div>
+
+    <div class="panel panel-default">
+
+        <div class="panel-heading">Messages</div>
+
+        <div class="panel-body">
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="message in main.messages">
+                    {{message.msg}} {{message.user.email}}
+                </li>
+            </ul>
         </div>
 
     </div>
