--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav ng-controller="NavbarController as nav" class="navbar navbar-static-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
@@ -10,8 +10,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><a ng-href="#">Home</a></li>
 <!--    <li><a ng-href="#/auth">Login</a></li>      Equivalent -->
-        <li><a ui-sref="auth">Login</a></li>
 
+          <li ng-hide="nav.isAuthenticated()"><a ui-sref="auth">Login</a></li>
+          <li ng-show="nav.isAuthenticated()"><a ng-click="nav.logout()">Logout</a></li>
       </ul>
     </div>
   </div>
